<resources>
    <string name="app_name">Mortality</string>

    <string name="routine">Routine</string>
    <string name="timers">Timers</string>

    <!--    Setup Process-->
    <string name="fragment_setup_birthday_heading">Let\'s start with your birth date</string>
    <string name="birthday_hint">DD — MM — YYYY</string>
    <string name="get_started">Get Started</string>
    <string name="setup_about">You are going to <b>DIE</b> one day,\nand you have limited time to live\n <b>ONE LIFE</b></string>
    <string name="setup_about_1">This app aims to help you realise &amp; manage TIME more effectively</string>
    <string name="pick_your_birthdate">Select your birth date</string>
    <string name="fragment_setup_death_heading">Life Expectancy</string>
    <string name="ever_thought_about_death">Ever thought about death?\nAt what age would you like to die?</string>
    <string name="control_death">Never thought? Take a chill pill 💊\n\n💡 You are in CONTROL of your quality of life and life span based on your habits</string>
    <string name="death_hint">Lifespan</string>
    <string name="sleep_desc">Sleep plays a crucial role in optimal day-to-day functioning. A healthy amount of sleep for an adult is 8 to 9 hours.</string>
    <string name="how_much_do_you_sleep">How much do you sleep?</string>
    <string name="hours">hours</string>
    <string name="day_end_heading">At what time do you end your day and go to sleep?</string>
    <string name="day_end_sub_heading">You cannot enter time post midnight</string>
    <string name="day_end_time_hint">22:00</string>

    <string name="pick_time">Pick Time</string>
    <string name="give_it_a_title">Give it a Title</string>
    <string name="title">title</string>
    <string name="set_title">Set Title</string>
    <string name="select_deadline_date">Select Deadline Date </string>

</resources>