<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_accent_blue">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/fragment_setup_death_heading"
            android:textColor="@color/theme_1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/ever_thought_about_death"
            android:textAlignment="center"
            android:textColor="@color/theme_1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_heading" />

        <!--        todo check this: wrong colour preview-->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_heading"
            app:layout_constraintVertical_bias="0.27"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_tree_death" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/slider_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:progressTint="?colorPrimary"
            android:thumbTint="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottie"
            tools:progress="20" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:focusable="false"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@id/lottie"
            app:layout_constraintStart_toStartOf="@id/lottie"
            app:layout_constraintTop_toBottomOf="@id/slider_age"
            app:strokeColor="@color/light_accent_blue">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_text_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/theme_3"
                android:duplicateParentState="true"
                android:gravity="center"
                android:hint="@string/death_hint"
                android:padding="10dp"
                android:textColor="@color/theme_1"
                android:textColorHint="@color/theme_1"
                android:textSize="18sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_footer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/control_death"
            android:textAlignment="center"
            android:textColor="@color/theme_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_year"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>